--- a/plugins/theme-my-login/theme-my-login.css
+++ b/plugins/theme-my-login/theme-my-login.css
@@ -1,7 +1,7 @@
 .tml {
 	padding: 80px;
     max-width: 600px;
-    margin: 200px auto;
+    margin: 200px auto 400px auto;
 	background-color: rgba(255, 255, 255, 0.9);
 	text-align: center;
 	border-radius: 5px;
